pluma_analyzer/tests/snapshots/analyze_tests__undefined_identifier_simple.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: wat
---

=== Source ===
wat

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Name \'wat\' is not defined.",
        pos: Some(
            (
                0,
                3,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

