pluma_analyzer/tests/snapshots/analyze_tests__undefined_type_in_signature.snap
---
source: pluma_analyzer/tests/analyze_tests.rs
expression: "def takesSomething Wat {\n  |arg| ()\n}"
---

=== Source ===
def takesSomething Wat {
  |arg| ()
}

=== Diagnostics ===
[
    Diagnostic {
        kind: Error,
        message: "Type Wat is not defined.",
        pos: Some(
            (
                19,
                22,
            ),
        ),
        module_name: None,
        module_path: None,
    },
]

